client/dedalo/core/component_info/css/component_info.less
/**
* component_info
*
* Included from main.less file
*/
.component_info {

	>.content_data {
		display: contents;

		>.content_value {
			contain: content;

			// used in user section to display 'loading widget..' message while load
			&.widget_item_user_activity {
				min-height: 27.65rem;

				.loading_message {
					padding: 3rem;
					color: var(--color_grey_10);
					display: flex;
					flex-direction: column;
					gap: 1.25rem;
					text-align: center;
					color: var(--color_grey_8);
					font-size: 0.875rem;
				}
			}
		}

	}//end >.content_data

	// generic wrapper_widget base style. Override on each widget if need
	// (!) Don't place inside .content_data to prevent overwrite specific widget styles
	.wrapper_widget {
		font-size: 0.86rem;
		width: 100%;

		// li
		.widget_item {
			padding: 0;

			>div {
				padding: 0.20rem;
				flex: 1 1 100%;

				&:last-of-type {
				  border: none;
				}

				>.label, >.value {
					padding: 0.25em;
				}

				>.label {
					white-space: nowrap;
					overflow: hidden;
					text-overflow: ellipsis;
				}
				>.value {
					padding-left: 0;
					line-height: 1.25rem;
				}
			}
		}

		.values_container > .widget_item {

			label {
				padding-right: 0.5em;
			}
			.value {

			}
		}
	}//end .wrapper_widget


	&.list {
		// display: contents;

		>.wrapper_widget {

			// ul
			>.values_container {
				display: contents;

				// li
				>.widget_item {
					display: flex;
					flex-wrap: wrap;

					// span
					>.state_icon {
						display: inline-block;
					}
				}
			}
		}
	}

}//end .component_info

